tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_5.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (((1223 MOD x) <= 1223) & ((1 + (+ z)) >= 2));
               q := (((+ (z * 1223)) DIV x) < x);
               y := y;
  (* error *)  x := 1223;
               x := ((2 * z) MOD z);
               y := y;
               x := 2;
               p := ((z * (x + 200)) <= (- ((2 DIV 1) DIV (0 * 0))));
               q := p;
               y := ((((+ 200) + 1223) - y) MOD (z DIV 2))
END Test14.